# abstract-vm

./: .gitignore  CMakeLists.txt  README.md
Operand/: IOperand.h  Operand.c  Operand.h
VM/: Vm.h  main.cpp  vm.c
